--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,60 +1,8 @@
-@media screen and (max-width: 3440px) {
-    header {
-        width: 70%;
-    }
-    .container-about {
-        padding: 0 25vw;
-        padding-top: 0;
-    }
-    .content-about p {
-        width: 30%;
-        margin-left: 5vw;
-    }
-    .content-about .button-23 {
-        margin-left: 5vw;
-    }
-    .content-about img {
-        margin-right: 10vw;
-    }
-}
-@media screen and (max-width: 3072px) {
-    .st {
-        width: 100%;
-        font-size: 8rem;
-    }
-    .content-about h2 {
-        font-size: 4rem;
-        width: 100%;
-    }
-}
-@media screen and (max-width: 2769px) {
-    .container-about {
-        padding: 0 20%;
-    }
-}
-@media screen and (max-width: 2103px) {
-    .container-about {
-        padding: 0 12%;
-    }
-}
-@media screen and (max-width: 1593px) {
-    .container-about {
-        padding: 0 5%;
-    }
-    .st {
-        font-size: 6rem;
-        margin-left: 0;
-    }
-    header {
-        width: 85%;
-    }
-}
-/* ---------------------------------Navbar------------------------------ */
-@media only screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
     header {
         width: 90%;
         padding: 0 20px;
-        background-color: #1c1f2700;
+        background-color: #0847f400;
     }
     nav {
         position: absolute;
@@ -98,194 +46,170 @@
     }
 }
 
-@media only screen and (min-width: 1466px) {
-    .text_head p {
-        width: 40%;
+@media screen and (max-width: 2911px){
+    .container-about {
+        padding: 8vw 18vw;
     }
-}
-@media only screen and (max-width: 1422px) {
-    .text_head h1 {
-        font-size: 150px;
-    }
-    .text_head h2 {
-        font-size: 80px;
-    }
-    .text_head p {
-        font-size: 20px;
+    .content-about {
+        padding: 5vw 15%;
     }
     .content-about p {
-        width: 40%;
+        margin-left: 10%;
+    }
+    .content-about .button-23 {
+        margin-left: 10%;
     }
 }
-@media only screen and (max-width: 1280px) {
-    .text_head p {
-        width: 50%;
+@media screen and (max-width: 2351px){
+    header {
+        width: 70%;
+    }
+    .container-about {
+        padding: 8vw 15vw;
+    }
+    .st {
+        font-size: 8rem;
     }
 }
-@media screen and (max-width: 1094px) {
-    .content-about .img-show {
-        width: 200px;
-        margin-right: 12vw;
-        margin-top: 15vh;
+@media screen and (max-width: 2150px) {
+    .st {
+        width: 100%;
+        font-size: 7rem;
+    }
+    .container-about {
+        padding: 8vw 10vw;
+    }
+    .content-about {
+        padding: 5vw 13%;
+    }
+    .content-about p {
+        margin-left: 0;
+    }
+    .content-about .button-23 {
+        margin-left: 0;
     }
 }
-@media only screen and (max-width: 1020px) {
+@media screen and (max-width: 1920px) {
+    .content-about p {
+        font-size: 16px;
+    }
+    .content-about h2 {
+        font-size: 4rem;
+    }
+}
+@media screen and (max-width: 1780px) {
     .text_head {
         margin-top: -5vh;
     }
-    .text_head p {
-        width: 50%;
-        font-size: 20px;
-    }
     .text_head h1 {
-        font-size: 120px;
+        font-size: 10rem;
     }
     .text_head h2 {
-        font-size: 65px;
-        margin-top: 0vh;
+        font-size: 5rem;
     }
-    .button-23 {
-        padding: 30px 33px;
-        font-size: 25px;
-    }
-    .content-about {
-        margin-left: 0;
-        margin-top: -1vh;
-    }
-    .container-about {
-        padding: 0 10vh;
-    }
-    .st {
-        font-size: 4rem;
-        line-height: 55px;
-    }
-    .content-about img {
-        width: 200px;
-        margin-top: 20vh;
+    .text_head p {
+        font-size: 20px;
     }
 }
-@media screen and (max-width: 836px){
-    .circle {
-        width: 300px;
-        height: 200px;
+@media screen and (max-width: 1508px) {
+    .content-about {
+        padding: 5vw 10%;
     }
-    .text_head h1{
-        font-size: 80px;
+    .st {
+        font-size: 6rem;
+    }
+    .content-about h2 {
+        font-size: 3rem;
+    }
+    .content-about p {
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 1350px) {
+    .text_head h1 {
+        font-size: 8rem;
+    }
+    .text_head h2 {
+        font-size: 4rem;
+    }
+    .text_head p {
+        font-size: 16px;
+    }
+    .text_head {
+        height: 50vh;
+    }
+}
+@media screen and (max-width: 1160px) {
+    .content-about p {
+        padding-right: 0;
+    }
+    .st {
+        font-size: 5rem;
+    }
+    .content-about .img-show {
+        display: none;
+    }
+    .img-hidden {
+        display: block;
+        margin-left: 35%;
+    }
+    .img-hidden img {
+        width: 40%;
+    }
+    header {
+        width: 80%;
+        height: 70px;
+    }
+    .re-home a box-icon {
+        padding: 5px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .text_head h1, h2 {
+        margin-bottom: 20px;
+    }
+    .text_head h1 {
+        font-size: 90px;
     }
     .text_head h2 {
         font-size: 50px;
     }
     .text_head p {
         font-size: 16px;
-    }
-    .content-head hr {
-        margin-top: 1vh;
+        width: 50%;
     }
 }
-@media screen and (max-width: 900px) {
-    .content-head hr {
-        margin: 0 5vw;
-        margin-top: 20vh;
-    }
-}
-@media only screen and (max-width: 830px){
-    .circle {
-        width: 300px;
-        height: 200px;
-    }
-    .content-about p {
-        width: 100%;
-        margin-left: 0;
-    }
-    .content-about img {
-        margin-top: 0;
-        width: 180px;
-        margin: 0;
-    }
-    .content-about h2 {
+@media screen and (max-width: 800px) {
+    .st {
         font-size: 3rem;
     }
     .container-about {
-        padding: 0 10vw;
+        padding-top: 0;
     }
-    .st {
+}
+@media screen and (max-width: 590px) {
+    .text_head h1 {
+        font-size: 65px;
+    }
+    .text_head h2 {
+        font-size: 35px;
+    }
+    .content-head hr{
         margin-top: 10vh;
     }
-    .content-about .button-23 {
-        margin-left: 0;
-    }
-}
-@media screen and (max-width: 820px) {
-    .content-about .img-show {
-        margin-right: 0;
-    }
-}
-@media only screen and (max-width: 772px) {
-    .text_head {
-        margin-top: -37vh;
-    }
-    .text_head p {
-        width: 50%;
-        font-size: 16px;
-        margin-top: 2vh;
-    }
-    .text_head h1 {
-        font-size: 90px;
-    }
-    .text_head h2 {
-        font-size: 55px;
-        margin-top: 0vh;
-    }
-    .button-23 {
-        padding: 27px 27px;
-        font-size: 20px;
-    }
-}
-@media screen and (max-width: 694px){
-    .st {
-        font-size: 3rem;
-    }
-}
-@media only screen and (max-width: 622px) {
-    .text_head {
-        margin-top: -37vh;
-    }
-    .text_head p {
-        width: 50%;
-        font-size: 13px;
-        margin-top: 2vh;
-    }
-    .text_head h1 {
-        font-size: 70px;
-    }
-    .text_head h2 {
-        font-size: 40px;
-        margin-top: 0vh;
-    }
-    .button-23 {
-        padding: 20px 22px;
-        font-size: 17px;
-    }
-}
 
-@media only screen and (max-width: 540px){
-    .content-about img {
-        width: 130px;
-    }
-}
-@media only screen and (max-width: 520px){
     .st {
+        line-height: 5vh;
+        margin-top: 10vh;
+    }
+    .content-about h2 {
         font-size: 2rem;
     }
+    .content-about p span {
+        font-size: 1.5rem;
+    }
 }
-@media only screen and (max-width: 482px){
-    .circle {
-        width: 200px;
-        height: 200px;
-    }
-    .text_head {
-        margin-top: -20vh;
-    }
+@media screen and (max-width: 480px) {
     .text_head h1 {
         font-size: 50px;
     }
@@ -293,90 +217,18 @@
         font-size: 30px;
     }
     .text_head p {
-        width: 50%;
-        font-size: 10px;
+        font-size: 14px;
     }
-}
-@media only screen and (max-width: 472px){
-    .content-about .img-show {
-        display: none;
-    }
-    .content-about p {
-        margin: 0;
-        margin-top: 6vh;
-    }
-    .content-about .img-hidden {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-    }
-    .content-about h2 {
-        font-size: 3rem;
-    }
-}
-@media only screen and (max-width: 330px){
-    .content-about .img-hidden {
-        margin-top: 2vh;
-    }
-    .content-about p {
-        margin-top: 3vh;
-        font-size: 12px;
-    }
-    .content-about .button-23 {
-        font-size: 12px;
-    }
-    .st {
-        font-size: 3rem;
-        -webkit-text-stroke: 1px #4747475b;
-    }
-}
-/* ---------------------HEIGHT-------------------------- */
 
-@media only screen and (height: 1320px){
-    .text_head {
-        padding-top: 10%;
+    .content-head hr {
+        margin: 0 6vh;
+        margin-top: 14vh;
     }
 }
-@media only screen and (min-height: 1180px){
-    .text_head {
-        margin-top: -28vh;
+@media screen and (max-width: 380px) {
+    .circle {
+        width: 50px;
+        height: 50px;
     }
 
 }
-@media only screen and (max-height: 932px){
-    .text_head {
-        margin-top: -30vh;
-    }
-
-}
-@media only screen and (max-height: 844px){
-    .text_head {
-        margin-top: -30vh;
-    }
-
-}
-@media only screen and (max-height: 820px){
-    .text_head {
-        margin-top: -52vh;
-    }
-
-}
-@media only screen and (max-height: 780px){
-    .text_head {
-        margin-top: -33vh;
-    }
-
-}
-@media only screen and (max-height: 578px){
-    .text_head {
-        margin-top: -45vh;
-    }
-
-}
-
-
-
-/* ---------------------HEIGHTข้างบน-------------------------- */
-
-
