--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -100,41 +100,22 @@ nav ul li a.active {
   margin-top: 35vh;
 }
 .bg-header {
-  left: 48%;
-  top: 50%;
-  z-index: -999;
-  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .obj-cc {
   animation: rotate 12s cubic-bezier(0.8, 0.5, 0.5, 0.8) alternate infinite;
-}
-.one {
   content: '';
-  width: 350px;
-  height: 350px;
-  background-color: #92fff2;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(circle, rgba(86,255,0,1) 36%, rgba(116,255,251,1) 42%);
   border-radius: 62% 38% 31% 69% / 70% 51% 49% 30% ;
   filter: blur(120px);
-  margin-top: -20vh;
-}
-.two {
-  content: '';
-  width: 300px;
-  height: 300px;
-  background-color: #4fffa7;
-  border-radius: 62% 38% 31% 69% / 70% 51% 49% 30% ;
-  filter: blur(100px);
-  margin-left: -10vw;
-}
-.three {
-  content: '';
-  width: 350px;
-  height: 350px;
-  background-color: #00fff7;
-  border-radius: 62% 38% 31% 69% / 70% 51% 49% 30% ;
-  filter: blur(100px);
-  margin-top: -30vh;
+  position: absolute;
+  z-index: -999;
+  text-align: center;
 }
 @keyframes rotate {
   0% {
