--- a/client/src/styles/responsive.css
+++ b/client/src/styles/responsive.css
@@ -45,6 +45,53 @@
         background-color: #60879162;
     }
 }
+@media screen and (max-width: 1100px) {
+    header {
+        width: 90%;
+        padding: 0 20px;
+        background-color: #0847f400;
+    }
+    nav {
+        position: absolute;
+        position: fixed;
+        left: -300px;
+        top: 0;
+        z-index: 999;
+        width: 280px;
+        height: 100vh;
+        background: #1c1f27;
+        transition: 0.5s;
+        box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.194);
+    }
+    #nav_check:checked ~ nav {
+        left: 0;
+    }
+    nav .logo {
+        display: block;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
+    }
+    nav ul li a{
+        color: #ffffff;
+        margin-bottom: 5px;
+        padding: 10px 15px;
+        border-radius: 5px;
+    }
+    nav ul {
+        display: block;
+        padding: 0 20px;
+        margin-top: 30px;
+    }
+    .hamburger {
+        display: block;
+        position: fixed;
+        right: 9vw;
+        z-index: 999;
+        background-color: #60879162;
+    }
+}
 
 @media screen and (max-width: 2911px){
     .container-about {
@@ -277,3 +324,5 @@
         filter: blur(50px);
     }
 }
+
+/* -----------------------------Pages : Manage --------------------------------------- */
